Adding load balancer

--- a/k8s/k8s-example.yaml
+++ b/k8s/k8s-example.yaml
@@ -16,6 +16,18 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: learnmyaks.azurecr.io/mecinasaksdevopslearn
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app: nginx
+  ports:
+    - port: 80
+      targetPort: 80
+  type: LoadBalancer
