Revert "correct pipeline"
This reverts commit f1d13f8edb04a2f48e80641df97348931765033c.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   imageRepository: 'mecinasaksdevopslearn'
   containerRegistry: 'learnmyaks.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Docker/Dockerfile'
-  tag: 'latest'
+  tag: '$(Build.BuildId)'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
